[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/welcome.gd" type="Script" id=1]
[ext_resource path="res://textures/bgarmor_logo_name.png" type="Texture" id=2]

[node name="Welcome" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptDialog" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 58.0
popup_exclusive = true

[node name="FileDialogNew" type="FileDialog" parent="."]
anchor_left = 0.45
anchor_top = 0.25
anchor_right = 0.55
anchor_bottom = 0.75
margin_left = -247.5
margin_top = -69.0
margin_right = 247.5
margin_bottom = 69.0
popup_exclusive = true
window_title = "Create Project"
resizable = true
access = 2
current_dir = "/home/bioage/Documents/GitHub/bgarmor/source/panel"
current_path = "/home/bioage/Documents/GitHub/bgarmor/source/panel/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialogOpen" type="FileDialog" parent="."]
anchor_left = 0.45
anchor_top = 0.25
anchor_right = 0.55
anchor_bottom = 0.75
margin_left = -247.5
margin_top = -69.0
margin_right = 247.5
margin_bottom = 69.0
popup_exclusive = true
window_title = "Open a File"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.bgarmor" )
current_dir = "/home/bioage/Documents/GitHub/bgarmor/source/panel"
current_path = "/home/bioage/Documents/GitHub/bgarmor/source/panel/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRectLogo" type="TextureRect" parent="Panel/VBoxContainer"]
margin_right = 780.0
margin_bottom = 189.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 193.0
margin_right = 780.0
margin_bottom = 430.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainerL" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer"]
margin_right = 388.0
margin_bottom = 237.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelProject" type="Label" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainerL"]
margin_right = 388.0
margin_bottom = 14.0
text = "Project:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonNew" type="Button" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainerL"]
margin_top = 18.0
margin_right = 388.0
margin_bottom = 38.0
text = "New Project"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonOpen" type="Button" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainerL"]
margin_top = 42.0
margin_right = 388.0
margin_bottom = 62.0
text = "Open Project"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelLinks" type="Label" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainerL"]
margin_top = 66.0
margin_right = 388.0
margin_bottom = 97.0
text = "
Links:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonDocs" type="Button" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainerL"]
margin_top = 101.0
margin_right = 388.0
margin_bottom = 121.0
text = "Documentation"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSource" type="Button" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainerL"]
margin_top = 125.0
margin_right = 388.0
margin_bottom = 145.0
text = "Source Code"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainerRecent" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 392.0
margin_right = 780.0
margin_bottom = 237.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelRecent" type="Label" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainerRecent"]
margin_right = 388.0
margin_bottom = 14.0
text = "Recent:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonClearRecent" type="Button" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainerRecent"]
margin_top = 18.0
margin_right = 388.0
margin_bottom = 38.0
text = "Clear list"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="file_selected" from="FileDialogNew" to="." method="_on_FileDialogNew_file_selected"]
[connection signal="file_selected" from="FileDialogOpen" to="." method="_on_FileDialogOpen_file_selected"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/VBoxContainerL/ButtonNew" to="." method="_on_ButtonNew_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/VBoxContainerL/ButtonOpen" to="." method="_on_ButtonOpen_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/VBoxContainerL/ButtonDocs" to="." method="_on_ButtonDocs_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/VBoxContainerL/ButtonSource" to="." method="_on_ButtonSource_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/VBoxContainerRecent/ButtonClearRecent" to="." method="_on_ButtonClearRecent_pressed"]
